# kafka_client

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: derive.md  design.txt  kafka-protocol-guide.txt  messages.txt  protocol_mod.txt
examples/: README.md  admin_operations.rs  basic_connect.rs  large_batch.rs  produce_consume.rs  raw_connection.rs  sasl_auth.rs  stress_test.rs  test_connect.rs  test_produce_consume.rs  test_raw_connect.rs  tls_connect.rs
kafka-client-protocol/: Cargo.toml
kafka-client-protocol-codegen/: Cargo.toml
kafka-client-protocol-codegen/src/: downloader.rs  generator.rs  lib.rs  parser.rs  types.rs  utils.rs
kafka-client-protocol-core/: Cargo.toml
kafka-client-protocol-core/src/: codec.rs  error.rs  frame.rs  header.rs  lib.rs  message.rs  message_impls.rs  record_batch.rs
kafka-client-protocol-derive/: Cargo.toml
kafka-client-protocol-derive/src/: decode.rs  encode.rs  field.rs  lib.rs  size.rs  version_range.rs
kafka-client-protocol/src/: lib.rs  version.rs
kafka-client-protocol/src/api/: add_offsets_to_txn_request.rs  add_offsets_to_txn_response.rs  add_partitions_to_txn_request.rs  add_partitions_to_txn_response.rs  add_raft_voter_request.rs  add_raft_voter_response.rs  allocate_producer_ids_request.rs  allocate_producer_ids_response.rs  alter_client_quotas_request.rs  alter_client_quotas_response.rs  alter_configs_request.rs  alter_configs_response.rs  alter_partition_reassignments_request.rs  alter_partition_reassignments_response.rs  alter_partition_request.rs  alter_partition_response.rs  alter_replica_log_dirs_request.rs  alter_replica_log_dirs_response.rs  alter_share_group_offsets_request.rs  alter_share_group_offsets_response.rs  alter_user_scram_credentials_request.rs  alter_user_scram_credentials_response.rs  api_versions_request.rs  api_versions_response.rs  assign_replicas_to_dirs_request.rs  assign_replicas_to_dirs_response.rs  begin_quorum_epoch_request.rs  begin_quorum_epoch_response.rs  broker_heartbeat_request.rs  broker_heartbeat_response.rs  broker_registration_request.rs  broker_registration_response.rs  consumer_group_describe_request.rs  consumer_group_describe_response.rs  consumer_group_heartbeat_request.rs  consumer_group_heartbeat_response.rs  consumer_protocol_assignment.rs  consumer_protocol_subscription.rs  control_record_type_schema.rs  controlled_shutdown_request.rs  (+160 more)
kafka_protocol_codegen/: Cargo.toml
kafka_protocol_codegen/src/: downloader.rs  error.rs  generator.rs  lib.rs  parser.rs
kafka_protocol_derive/: Cargo.toml
kafka_protocol_derive/src/: lib.rs
protocol-definitions/: README.md
protocol_definitions/: DescribeShareGroupOffsetsResponse.json  ReadShareGroupStateSummaryResponse.json  WriteShareGroupStateRequest.json
scripts/: publish.sh
src/: admin.rs  codec.rs  connection.rs  error.rs  lib.rs
src/client/: broker_manager.rs  consumer.rs  core.rs  low_level.rs  metadata.rs  mod.rs  partition_router.rs  producer.rs
src/client/high_level/: consumer.rs  mod.rs  partition_router.rs  producer.rs
src/cluster/: broker.rs  metadata.rs  mod.rs
src/connection/: handshake.rs  mod.rs  versions.rs
src/consumer/: config.rs  group.rs  mod.rs  reactor.rs  simple.rs  types.rs  util.rs
src/producer/: mod.rs  router.rs
src/protocol/: codec.rs  collection.rs  error.rs  header.rs  message.rs  mod.rs  primitive.rs  uuid.rs
src/protocol/api/: add_offsets_to_txn.rs  add_partitions_to_txn.rs  add_raft_voter.rs  allocate_producer_ids.rs  alter_client_quotas.rs  alter_configs.rs  alter_partition.rs  alter_partition_reassignments.rs  alter_replica_log_dirs.rs  alter_share_group_offsets.rs  alter_user_scram_credentials.rs  api_versions.rs  assign_replicas_to_dirs.rs  begin_quorum_epoch.rs  broker_heartbeat.rs  broker_registration.rs  consumer_group_describe.rs  consumer_group_heartbeat.rs  controlled_shutdown.rs  controller_registration.rs  create_acls.rs  create_delegation_token.rs  create_partitions.rs  create_topics.rs  delete_acls.rs  delete_groups.rs  delete_records.rs  delete_share_group_offsets.rs  delete_share_group_state.rs  delete_topics.rs  describe_acls.rs  describe_client_quotas.rs  describe_cluster.rs  describe_configs.rs  describe_delegation_token.rs  describe_groups.rs  describe_log_dirs.rs  describe_producers.rs  describe_quorum.rs  describe_share_group_offsets.rs  (+54 more)
src/sasl/: mod.rs  plain.rs  scram.rs
src/transport/: codec.rs  mod.rs  tcp.rs  tls.rs
src/wire/: codec.rs  mod.rs
tests/: auth.rs  cluster.rs  consumer_group.rs  consumer_seek.rs  docker-compose.sasl.yml  docker-compose.single.yml  docker-compose.tls.yml  docker-compose.yml  download-kafka.sh  gen-certs.sh  large_batch.rs  multi_topic.rs  offset_commit.rs  offset_reset.rs  produce_consume.rs  produce_with_keys.rs  producer_acks.rs  run-all-tests  run-all-tests.sh  tls.rs
tests/common/: compose.rs  mod.rs
tests/fixtures/tls/: broker-cert.pem  broker-key.pem  ca-cert.pem  ca-key.pem  client-ssl.properties  client.keystore.jks  kafka.truststore.jks  kafka01.keystore.jks
