[package]
name = "kafka-client-protocol-codegen"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "kafka-download"
path = "src/bin/download_definitions.rs"

[[bin]]
name = "kafka-gen"
path = "src/bin/generate_api.rs"

[dependencies]
# 网络请求
reqwest = { version = "0.13", features = ["blocking", "json"] }
# JSON 解析
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 命令行
clap = { version = "4.0", features = ["derive"] }
# 文件处理
walkdir = "2"
anyhow = "1.0"
thiserror = "1.0"
# 字符串处理
Inflector = "0.11"
regex = "1"

[dev-dependencies]
tempfile = "3"
