[package]
name = "kafka-client-protocol-codegen"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
publish = false  # Code generation tool, not for publishing

[[bin]]
name = "kafka-download"
path = "src/bin/download_definitions.rs"

[[bin]]
name = "kafka-gen"
path = "src/bin/generate_api.rs"

[dependencies]
# 网络请求
reqwest = { version = "0.13", features = ["blocking", "json"] }
# JSON 解析
json5 = "1.3"
serde = { workspace = true }
serde_json = { workspace = true }
# 命令行
clap = { version = "4.0", features = ["derive"] }
# 文件处理
walkdir = "2"
anyhow = "1.0"
thiserror = { workspace = true }
# 字符串处理
Inflector = "0.11"
regex = "1"

[dev-dependencies]
tempfile = "3"
