[package]
name = "kafka-client-protocol-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core types and traits for Kafka protocol encoding/decoding"
documentation = "https://docs.rs/kafka-client-protocol-core"
repository.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
crc32c = "0.6"
flate2 = "1.1"
lz4_flex = "0.13"
snap = "1"
thiserror = { workspace = true }
uuid = { workspace = true }
zstd = { version = "0.13", default-features = false }
kafka-client-protocol-derive = { workspace = true }
