[package]
name = "kafka-client-protocol-derive"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
authors = ["zzzdong <kuwater@163.com>"]
description = "Derive macros for Kafka protocol message types"
documentation = "https://docs.rs/kafka_client"
repository = "https://github.com/zzzdong/kafka_client"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "derive", "extra-traits"] }
