[package]
name = "kafka-client-protocol-derive"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Derive macros for Kafka protocol message types"
documentation = "https://docs.rs/kafka-client-protocol-derive"
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "derive", "extra-traits"] }
