[package]
name = "kafka_protocol_codegen"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "download_definitions"
path = "src/bin/download_definitions.rs"

[[bin]]
name = "generate_api"
path = "src/bin/generate_api.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10"
